--- a/org/cloudfoundry.yml
+++ b/org/cloudfoundry.yml
@@ -2510,4 +2510,22 @@ orgs:
           multiapps: admin
           multiapps-controller: admin
           multiapps-cli-plugin: admin
+      temp-sm-csb-bots-admins:
+        description: "Temporary team to allow for bots driven dependency bumps until we implement another strategy"
+        maintainers:
+          - pivotal-marcela-campo
+        members:
+          - servicesenablement
+        privacy: closed
+        repos:
+          cloud-service-broker: admin
+          csb-brokerpak-azure: admin
+          csb-brokerpak-aws: admin
+          csb-brokerpak-gcp: admin
+          jdbctestapp: admin
+          upgrade-all-services-cli-plugin: admin
+          terraform-provider-csbpg: admin
+          terraform-provider-csbmysql: admin
+          terraform-provider-csbsqlserver: admin
 
+        
